# src/main/java/com/youthchina/controller/zhongyang/QuestionController.java
@@ -7,7 +7,6 @@ import com.youthchina.dto.Response;
 import com.youthchina.dto.StatusDTO;
 import com.youthchina.dto.community.answer.RequestSimpleAnswerDTO;
 import com.youthchina.dto.community.answer.SimpleAnswerDTO;
-import com.youthchina.dto.community.question.QuestionBasicDTO;
 import com.youthchina.dto.community.question.QuestionDTO;
 import com.youthchina.dto.community.question.RequestQuestionDTO;
 import com.youthchina.dto.security.UserDTO;
@@ -32,7 +31,7 @@ import java.util.List;
  */
 @RestController
 @RequestMapping("${web.url.prefix}/questions/**")
-public class QuestionController extends DomainCRUDController<QuestionDTO, Question, Integer>{
+public class QuestionController extends DomainCRUDController<QuestionDTO, Question, Integer> {
     private String url;
     private CommunityQAService communityQAService;
 
@@ -63,33 +62,33 @@ public class QuestionController extends DomainCRUDController<QuestionDTO, Questi
     }
 
     @GetMapping("/**")
-    public ResponseEntity<?> getQuestions(@RequestParam(value = "Company") String company,@RequestParam(value = "Job") String job) throws NotFoundException {
-        if(!company.equals("")){
-            List<Question> qlists=  communityQAService.searchQuestionByTitleOrCompanyName(company);
-            if(qlists.size() != 0){
+    public ResponseEntity<?> getQuestions(@RequestParam(value = "Company") String company, @RequestParam(value = "Job") String job) throws NotFoundException {
+        if (!company.equals("")) {
+            List<Question> qlists = communityQAService.searchQuestionByTitleOrCompanyName(company);
+            if (qlists.size() != 0) {
                 List<QuestionDTO> qdlist2 = new ArrayList<>();
-                for(int i = 0; i<qlists.size(); i++){
-                    QuestionDTO questionDTO = DomainToDto(qlists.get(i));
+                for (Question qlist : qlists) {
+                    QuestionDTO questionDTO = DomainToDto(qlist);
                     qdlist2.add(questionDTO);
                 }
-                HashMap<String,Object> map3 = new HashMap<>();
+                HashMap<String, Object> map3 = new HashMap<>();
                 map3.put("questions", qdlist2);
                 return ResponseEntity.ok(new Response(map3));
             }
-        }else if(!job.equals("")){
-            List<Question> qlists2=  communityQAService.searchQuestionByTitleOrCompanyName(job);
-            if (qlists2.size() != 0){
+        } else if (!job.equals("")) {
+            List<Question> qlists2 = communityQAService.searchQuestionByTitleOrCompanyName(job);
+            if (qlists2.size() != 0) {
                 List<QuestionDTO> qdlist = new ArrayList<>();
-                for(int i = 0; i<qlists2.size(); i++){
-                    QuestionDTO questionDTO = DomainToDto(qlists2.get(i));
+                for (Question question : qlists2) {
+                    QuestionDTO questionDTO = DomainToDto(question);
                     qdlist.add(questionDTO);
                 }
-                HashMap<String,Object> map3 = new HashMap<>();
+                HashMap<String, Object> map3 = new HashMap<>();
                 map3.put("questions", qdlist);
                 return ResponseEntity.ok(new Response(map3));
             }
         }
-        throw new NotFoundException(4000,404,"not found questions");
+        throw new NotFoundException(4000, 404, "not found questions");
     }
 
     @GetMapping("/{id}")
@@ -116,7 +115,7 @@ public class QuestionController extends DomainCRUDController<QuestionDTO, Questi
         QuestionDTO questionDTO = new QuestionDTO(question);
         questionDTO.setId(id);
         update(questionDTO);
-        return ResponseEntity.ok(new Response(new StatusDTO(204,"updated success")));
+        return ResponseEntity.ok(new Response(new StatusDTO(204, "updated success")));
     }
 
     @DeleteMapping("/{id}")
@@ -128,9 +127,9 @@ public class QuestionController extends DomainCRUDController<QuestionDTO, Questi
     public ResponseEntity<?> getAnswers(@PathVariable Integer id) throws NotFoundException {
         System.out.println("get answers");
         QuestionDTO questionDTO = getDto(id);
-        Question question = communityQAService.get(id);
-        QuestionBasicDTO questionBasicDTO = new QuestionBasicDTO(question);
-        HashMap<String,Object> map1 = new HashMap<>();
+        //Question question = communityQAService.get(id);
+        //QuestionBasicDTO questionBasicDTO = new QuestionBasicDTO(question);
+        HashMap<String, Object> map1 = new HashMap<>();
         map1.put("answers", questionDTO.getAnswers());
 
         return ResponseEntity.ok(new Response(map1));
@@ -138,14 +137,12 @@ public class QuestionController extends DomainCRUDController<QuestionDTO, Questi
 
     @PutMapping("/{id}/invite/**")
     public ResponseEntity<?> sendInvites(@PathVariable Integer id, @RequestBody List<Integer> userIds, @AuthenticationPrincipal User user) throws NotFoundException {
-        System.out.println("invite users to answer");
         communityQAService.invitUsersToAnswer(user.getId(), id, userIds);
         return ResponseEntity.ok(new Response());
     }
 
     @PutMapping("/{questionId}/invite/{userId}")
     public ResponseEntity<?> sendInvite(@PathVariable Integer questionId, @PathVariable Integer userId, @AuthenticationPrincipal User user) throws NotFoundException {
-        System.out.println("invite user 1 to answer");
         List<Integer> list = new ArrayList<>();
         list.add(userId);
         communityQAService.invitUsersToAnswer(user.getId(), questionId, list);
@@ -153,8 +150,7 @@ public class QuestionController extends DomainCRUDController<QuestionDTO, Questi
     }
 
     @PutMapping("/{id}/attention")
-    public ResponseEntity<?> followUp (@PathVariable Integer id, @AuthenticationPrincipal User user) throws NotFoundException {
-        System.out.println("add attention");
+    public ResponseEntity<?> followUp(@PathVariable Integer id, @AuthenticationPrincipal User user) throws NotFoundException {
         communityQAService.attentionQuestion(id, user.getId());
         return ResponseEntity.ok(new Response());
     }
@@ -172,11 +168,11 @@ public class QuestionController extends DomainCRUDController<QuestionDTO, Questi
         questionAnswer.setAnswer_pub_time(new Timestamp(System.currentTimeMillis()));
         questionAnswer.setAnswer_edit_time(new Timestamp(System.currentTimeMillis()));
 
-        SimpleAnswerDTO returnSimpleAnswer = new SimpleAnswerDTO(communityQAService.addAnswer(questionAnswer,id,1));
-        if (returnSimpleAnswer!=null)
-            return ResponseEntity.ok(new Response(returnSimpleAnswer, new StatusDTO(200,"success")));
+        SimpleAnswerDTO returnSimpleAnswer = new SimpleAnswerDTO(communityQAService.addAnswer(questionAnswer, id, 1));
+        if (returnSimpleAnswer.getId() != null)
+            return ResponseEntity.ok(new Response(returnSimpleAnswer, new StatusDTO(200, "success")));
         else
-            return ResponseEntity.ok(new Response(returnSimpleAnswer, new StatusDTO(400,"fail")));
+            return ResponseEntity.ok(new Response(returnSimpleAnswer, new StatusDTO(400, "fail")));
     }
 
 }
