# src/main/java/com/youthchina/controller/zhongyang/UserController.java
@@ -65,60 +65,61 @@ public class UserController extends DomainCRUDController<UserDTO, User, Integer>
     }
 
     @GetMapping("/{id}/attentions")
-    public ResponseEntity<?> getAllCollections(@PathVariable("id") Integer user_id,@RequestParam(value="type") String type) throws NotFoundException{
-        switch (type){
-            case "Job":{
-                List<JobCollect> jobCollects=studentService.getJobCollect(user_id);
-                List<JobCollectResponseDTO> jobCollectResponseDTOS=new ArrayList<>();
-                for(JobCollect jobCollect:jobCollects){
-                    JobCollectResponseDTO jobCollectResponseDTO=new JobCollectResponseDTO(jobCollect);
+    public ResponseEntity<?> getAllCollections(@PathVariable("id") Integer user_id, @RequestParam(value = "type") String type) throws NotFoundException {
+        switch (type) {
+            case "Job": {
+                List<JobCollect> jobCollects = studentService.getJobCollect(user_id);
+                List<JobCollectResponseDTO> jobCollectResponseDTOS = new ArrayList<>();
+                for (JobCollect jobCollect : jobCollects) {
+                    JobCollectResponseDTO jobCollectResponseDTO = new JobCollectResponseDTO(jobCollect);
                     jobCollectResponseDTOS.add(jobCollectResponseDTO);
                 }
                 return ResponseEntity.ok(new Response(jobCollectResponseDTOS));
 
             }
 
-            case "Company":{
-                List<CompCollect> compCollects=studentService.getCompCollect(user_id);
-                List<CompCollectResponseDTO> compCollectResponseDTOS=new ArrayList<>();
-                for(CompCollect compCollect:compCollects){
-                    CompCollectResponseDTO compCollectResponseDTO=new CompCollectResponseDTO(compCollect);
+            case "Company": {
+                List<CompCollect> compCollects = studentService.getCompCollect(user_id);
+                List<CompCollectResponseDTO> compCollectResponseDTOS = new ArrayList<>();
+                for (CompCollect compCollect : compCollects) {
+                    CompCollectResponseDTO compCollectResponseDTO = new CompCollectResponseDTO(compCollect);
                     compCollectResponseDTOS.add(compCollectResponseDTO);
                 }
                 return ResponseEntity.ok(new Response(compCollectResponseDTOS));
 
             }
-            case "Essay":{
-                List<ComEssay> comEssays=essayService.getAllEssayUserAttention(user_id);
-                List<EssayDTO> essayDTOS=new ArrayList<>();
-                for(ComEssay comEssay:comEssays){
-                    EssayDTO essayDTO=new EssayDTO(comEssay);
+            case "Essay": {
+                List<ComEssay> comEssays = essayService.getAllEssayUserAttention(user_id);
+                List<EssayDTO> essayDTOS = new ArrayList<>();
+                for (ComEssay comEssay : comEssays) {
+                    EssayDTO essayDTO = new EssayDTO(comEssay);
                     essayDTOS.add(essayDTO);
 
                 }
                 return ResponseEntity.ok((new Response(essayDTOS)));
 
             }
-            case "Video":{
-                List<Video> videos=communityQAService.listAllUserAttenVideos(user_id);
-                List<VideoDTO> videoDTOS=new ArrayList<>();
-                for(Video video:videos){
-                    VideoDTO videoDTO=new VideoDTO(video);
+            case "Video": {
+                List<Video> videos = communityQAService.listAllUserAttenVideos(user_id);
+                List<VideoDTO> videoDTOS = new ArrayList<>();
+                for (Video video : videos) {
+                    VideoDTO videoDTO = new VideoDTO(video);
                     videoDTOS.add(videoDTO);
                 }
                 return ResponseEntity.ok(new Response(videoDTOS));
 
             }
-            case "Question":{
-                List<QuestionDTO> questionDTOS=new ArrayList<>();
-                List<Question> questions=communityQAService.listAllUserAttenQuestions(user_id);
-                for (Question question:questions){
-                    QuestionDTO questionDTO=new QuestionDTO(question);
+            case "Question": {
+                List<QuestionDTO> questionDTOS = new ArrayList<>();
+                List<Question> questions = communityQAService.listAllUserAttenQuestions(user_id);
+                for (Question question : questions) {
+                    QuestionDTO questionDTO = new QuestionDTO(question);
                     questionDTOS.add(questionDTO);
                 }
                 return ResponseEntity.ok(new Response(questionDTOS));
             }
-            default:throw new NotFoundException(404,404,"do not have this type");
+            default:
+                throw new NotFoundException(404, 404, "do not have this type");
 
 
         }
